Change color of tabs and map when clicked

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,7 +20,7 @@
 
 				<div class="right">
 					<div><i class="fa fa-share-alt" style="margin-right: 5px;"></i>공유</div>
-					<div onclick="$('#tab_map').click();"><i class="fa fa-globe" style="margin-right: 5px;"></i>지도</div>
+					<div id="rst_show_map"><i class="fa fa-globe" style="margin-right: 5px;"></i>지도</div>
 				</div>
 			</div>
 		</div>
