--- a/app/views/menus/_show.html.erb
+++ b/app/views/menus/_show.html.erb
@@ -1,4 +1,4 @@
-<li id="menu_<%= menu.id %>" class="menu">
+<li id="menu_<%= menu.id %>" class="menu" data-menu-id="<%= menu.id %>">
 	<div class="name_info"><%= menu.name %><span><%= menu.side_info %></span></div>
 	<div class="price"><%= won_div(menu) %><%= sitga_div(menu) %></div>
 	<div class="info"><%= menu.info %></div>
@@ -8,16 +8,3 @@
 		<%= link_to "delete", menu_path(menu), class: "delete_menu", method: :delete, remote: true, data: { confirm: "gogo?" } %>
 	<% end %>
 </li>
-
-<script>
-	$(document).ready(function(){
-		$("#menu_<%= menu.id %>").click(function(){
-			$.ajax({
-				url: '/comments/show',
-				data: {
-					menu_id: <%= menu.id %>
-				}
-			});
-		});
-	});
-</script>
