--- a/app/views/menus/_show.html.erb
+++ b/app/views/menus/_show.html.erb
@@ -1,4 +1,4 @@
-<li id="menu_<%= menu.id %>" class="menu" data-menu-id="<%= menu.id %>">
+<li id="menu_<%= menu.id %>" class="menu" data-menu-comments="<%= menu.id %>">
 	<div class="name_info"><%= menu.name %><span><%= menu.side_info %></span></div>
 	<div class="price"><%= won_div(menu) %><%= sitga_div(menu) %></div>
 	<div class="info"><%= menu.info %></div>
