--- a/app/views/restaurants/_info.html.erb
+++ b/app/views/restaurants/_info.html.erb
@@ -5,7 +5,9 @@
 	</li>
 	<li>
 		<i class="fa fa-phone" style="margin: 0 1px 0 2px"></i>
-		<%= link_to @restaurant.phnum, "tel:#{@restaurant.phnum}" %>
+		<%= link_to "tel:#{@restaurant.phnum}" do %>
+			<%= @restaurant.phnum %> <%= delivery_possible_with_middot(@restaurant) %>
+		<% end %>
 	</li>
 	<li style="text-align: center; text-decoration: none;">
 		<a href="#myModal" data-toggle="modal" data-target="#myModal" id="rest_err" style="text-decoration: none;">음식점 정보가 틀렸나요?</a>
