Add open_at list

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -328,5 +328,10 @@ span.MultiFile-label {
 			width: 15px;
 			margin-right: 5px;
 		}
+		img {
+			width: 17px;
+			margin-right: 1px;
+			vertical-align: top;
+		}
 	}
 }
