--- a/app/views/restaurants/_info.html.erb
+++ b/app/views/restaurants/_info.html.erb
@@ -9,6 +9,13 @@
 			<%= @restaurant.phnum %> <%= delivery_possible_with_middot(@restaurant) %>
 		<% end %>
 	</li>
+
+	<% if @restaurant.open_at %>
+		<li>
+			<%= image_tag "restaurants/open_at_icon.svg" %> <%= @restaurant.open_at %>
+		</li>
+	<% end %>
+
 	<li style="text-align: center; text-decoration: none;">
 		<a href="#myModal" data-toggle="modal" data-target="#myModal" id="rest_err" style="text-decoration: none;">음식점 정보가 틀렸나요?</a>
 	</li>
