--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -325,13 +325,11 @@ span.MultiFile-label {
 			}
 		}
 		i {
-			width: 15px;
-			margin-right: 5px;
+			width: 20px;
 		}
-		img {
-			width: 17px;
-			margin-right: 1px;
-			vertical-align: top;
+		i.fa-angle-right {
+			width: initial;
+			margin: 0 3px;
 		}
 	}
 }
