--- a/app/views/rest_errs/_new.html.erb
+++ b/app/views/rest_errs/_new.html.erb
@@ -1,9 +1,8 @@
-<h1>RestErrs#new</h1>
-
 <%= form_for [@restaurant, @rest_err], html: { mutipart: true } do |f| %>
 	<%= f.hidden_field :restaurant_id, value: @restaurant.id %>
 
-	<!-- Specify field because of controller subordination -->
 	<%= render "rest_errs/field", f: f %>
-	<%= f.submit "gogo rest_errs#create" %>
+	<div class="modal-footer" style="padding: 5px;">
+		<%= f.button "완료", class: "btn btn-primary" %>
+	</div>
 <% end %>
