--- a/app/views/restaurants/_info.html.erb
+++ b/app/views/restaurants/_info.html.erb
@@ -19,7 +19,7 @@
 		</li>
 	<% end %>
 
-	<li style="text-align: center; text-decoration: none;">
+	<li style="text-align: center;">
 		<a href="#myModal" data-toggle="modal" data-target="#myModal" id="rest_err" style="text-decoration: none;">음식점 정보가 틀렸나요?</a>
 	</li>
 </ul>
