--- a/app/views/restaurants/_picture.html.erb
+++ b/app/views/restaurants/_picture.html.erb
@@ -18,7 +18,7 @@
 </div>
 
 <div id="no_img" style="display: <%= no_img?(@pictures) %>;">
-	<div class="row" style="margin: 0; padding: 0 15px;">
+	<div class="row" style="margin: 0; padding: 0 15px 15px;">
 		<div class="col-xs-10 col-xs-offset-1" style="text-align: center; margin-top: 10px;">
 			현재 등록된 사진이 없습니다.</br>
 			사진을 등록해주세요.
