--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -235,9 +235,9 @@ span.MultiFile-label {
 	text-shadow: 0 1px 2px rgba(0,0,0,.6);
 }
 
-#no_img {
+#no_img, #no_blog, #no_menu {
 	> .row {
-		@extend .grey_thin_border;
+		@extend .thick_bottom_border;
 		> div {
 			@extend .left_border_label;
 			border-color: $MenuMap_orange;
