--- a/app/views/menus/_field.html.erb
+++ b/app/views/menus/_field.html.erb
@@ -15,7 +15,7 @@
 
 <div class="form-group" style="text-align: right;">
 	<%= f.check_box :sitga %>
-	<%= f.label :sitga, "싯가" %>
+	<%= f.label :sitga, "시가" %>
 
 	<%= f.check_box :unidentified %>
 	<%= f.label :unidentified, "미확인" %>
