Split js codes in home.js and change thick border's width and color

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,7 +6,7 @@ $grey_info_font: #999;
 $origin_link_blue: #337ab7;
 
 .thick_bottom_border {
-	border-bottom: 8px solid #E9EAED;
+	border-bottom: 4px solid #f1f1f1;
 }
 
 .grey_thin_border {
