--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -2,8 +2,8 @@
 
 <div class="container">
 	<div class="col-md-6 col-md-offset-3">
-		<%= form_tag restaurants_path, method: :get, name: nil do %>
-			<legend>MenuMap 검색</legend>
+		<%= form_tag restaurants_path, method: :get, id: "mm_search", name: nil do %>
+			<legend>음식점 검색</legend>
 
 			<!-- Autocomplete recommended address name with Addrcomplete model 
 					 by jquery-ui autocomplete function 											 -->
