Add margin on both top and bottom in menu tab and change restaurant's short name rule

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -203,6 +203,7 @@ nav.pagination {
 
 /* restaurants#show picture tab */
 #carousel {
+	@extend .thick_bottom_border;
 	.item {
 		height: 240px;
 		img {
@@ -313,6 +314,12 @@ span.MultiFile-label {
 	}
 	> ul {
 		@extend .thick_bottom_border;
+		> li:first-child {
+			margin-top: 10px;
+		}
+		> li:last-child {
+			margin-bottom: 20px;
+		}
 	}
 }
 		
