--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -89,10 +89,19 @@ html, body, h1, h2, h3, h4, h5, h6, p, a, input, textarea, button {
 
 .blue_outline {
 	&:active, &:hover {
-		border-color: #66afe9;
-		outline: 0;
-		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
-		box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+		border: none;
+		background-color: initial;
+		box-shadow: 0 0 1px 1px #66afe9;
+	}
+}
+
+/* header */
+nav .navbar-header {
+	.navbar-brand {
+		font-size: 18px;
+	}
+	button.navbar-toggle {
+		@extend .blue_outline;	
 	}
 }
 
