--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"> 
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" style="border: none; margin-bottom: 0;"> 
 				<span class="glyphicon glyphicon-option-vertical"></span>
       </button>
-      <button type="button" class="navbar-toggle collapsed">
-				<%= link_to search_path  do %>
+      <button type="button" class="navbar-toggle collapsed" style="border: none; margin-bottom: 0; margin-right: 5px;">
+				<%= link_to search_path, style: "color: initial;" do %>
 					<span class="glyphicon glyphicon-search"></span>
 				<% end %>
 			</button>
-			<%= link_to root_path, class: "navbar-brand" do %>
+			<%= link_to root_path, class: "navbar-brand", style: "padding-bottom: 0;" do %>
 				<span class="ubuntu">MenuMap</span>
 			<% end %>
     </div>
