--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -7,31 +7,33 @@
 
 			<!-- Autocomplete recommended address name with Addrcomplete model 
 					 by jquery-ui autocomplete function 											 -->
-			<div class="form-group">
+			<div class="form-group" style="margin-bottom: 0">
 				<%= label_tag :address, "지역" %>
 				<%= text_field_tag :address, nil, 
-										{ id: "addrcomplete", class: "form-control", placeholder: "gogo placeholder" } %>
+										{ id: "addrcomplete", class: "form-control", placeholder: "예) 서울대입구역, 신촌, 낙성대" } %>
+
+				<div style="text-align: right">
+					<%= check_box_tag :delivery %>
+					<%= label_tag :delivery, "배달 음식점" %>
+				</div>
 			</div>
 
 			<div class="form-group">
 				<div><%= label_tag :category, "음식 분류" %></div>
 
-				<!-- options_for_select(options[text, value], selected) -->
-				<div class="col-xs-6">
-					<%= select_tag nil, 
-								options_for_select(@categories.map{ |c| [c.name, c.id] }, nil), 
-																									{ id: "category_select", class: "form-control" } %>
+				<div style="margin-bottom: 50px;">
+					<!-- options_for_select(options[text, value], selected) -->
+					<div class="col-xs-6" style="padding: 0 5px 0 0;">
+						<%= select_tag nil, 
+									options_for_select(@categories.map{ |c| [c.name, c.id] }, nil), 
+																										{ id: "category_select", class: "form-control" } %>
+					</div>
+					<div class="col-xs-6" style="padding: 0 0 0 5px;">
+						<%= select_tag :category, 
+									options_for_select(@subcategories.map{ |s| [s.name, s.id] }, nil),
+																										{ id: "subcategory_select", class: "form-control" } %>
+					</div>
 				</div>
-				<div class="col-xs-6">
-					<%= select_tag :category, 
-								options_for_select(@subcategories.map{ |s| [s.name, s.id] }, nil),
-																									{ id: "subcategory_select", class: "form-control" } %>
-				</div>
-			</div>
-
-			<div class="form-group" style="text-align: right">
-				<%= check_box_tag :delivery %>
-				<%= label_tag :delivery, "배달 음식점만 검색" %>
 			</div>
 
 			<!--%= label_tag :currentPosition, "CurrentPosition" %-->
@@ -45,8 +47,8 @@
 			</div>
 
 			<div style="text-align: right">
-				<%= button_tag "취소", { type: :reset, class: "btn btn-primary", name: nil, onclick: "resetSubcat()" } %>
-				<%= button_tag "검색", { id: "submitbutton", class: "btn btn-primary", name: nil } %>
+				<%= button_tag "취소", { type: :reset, class: "btn btn_cancel", name: nil, onclick: "resetSubcat()" } %>
+				<%= button_tag "검색", { id: "submitbutton", class: "btn btn_submit", name: nil } %>
 			</div>
 		<% end %>
 	</div>
