--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -156,7 +156,7 @@ a.rst_card_link {
 .rst_index_card {
 	display: inline-block;
 	width: 100%;
-	padding: 0.5em 0;
+	padding: 10px 0;
 	border-bottom: 1px solid #f0f0f0;
 	&:active {
 		background-color: #efefef;
@@ -165,7 +165,6 @@ a.rst_card_link {
 		width: 120px; 
 		height: 90px; 
 		float: left;
-		margin: 0 0.5em 0 0;
 		img {
 			width: 100%;
 			height: 100%;
@@ -179,6 +178,7 @@ a.rst_card_link {
 	.content {
 		display: inline-block; 
 		max-width: 200px;
+		margin: 5px 0 0 10px;
 		color: #999;
 	}
 }
