--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="col-md-8 col-md-offset-2" style="padding: 0;">
-		<div id="naver_map" style="margin: -20px -15px 10px;"></div>
+		<div id="naver_map" style="margin: -20px -15px 0;"></div>
 
 		<%= link_to "new restaurant", new_restaurant_path if admin_user? %>
 
