Restaurants#show picture and others

--- a/app/views/menus/_new.html.erb
+++ b/app/views/menus/_new.html.erb
@@ -4,6 +4,6 @@
 
 		<!-- Specify field because of controller subordination -->
 		<%= render "menus/field", f: f %>
-		<%= f.button "추가", class: "btn btn-primary", style: "float: right;" %>
+		<%= f.button "추가", class: "btn btn_submit", style: "float: right;" %>
 	<% end %>
 </div>
