--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,6 +4,7 @@ $MenuMap_orange: #dd4814;
 $naver_green: #23b300;
 $grey_info_font: #999;
 $origin_link_blue: #337ab7;
+$facebook_link_blue: #5890ff;
 
 .thick_bottom_border {
 	border-bottom: 4px solid #f1f1f1;
@@ -76,16 +77,29 @@ label {
 	background-color: initial;
 	color: $MenuMap_orange;
 	font-weight: 500;
+	font-size: 85%;
 	&:hover, &:focus {
 		color: white;
 		background-color: $MenuMap_orange;
 	}
 }
 
+.btn_submit_blue {
+	background-color: initial;
+	color: $facebook_link_blue;
+	font-weight: 500;
+	font-size: 85%;
+	&:hover, &:focus {
+		color: white;
+		background-color: $facebook_link_blue;
+	}
+}
+	
 .btn_cancel {
 	background-color: initial;
 	color: grey;
 	font-weight: 500;
+	font-size: 85%;
 	&:hover, &:focus {
 		color: white;
 		background-color: #d1d1d1;
@@ -209,7 +223,7 @@ nav.pagination {
 	@extend .thick_bottom_border;
 	.name {
 		float: left; 
-		max-width: 270px;
+		max-width: 260px;
 		h1 {
 			margin: 10px 0;
 		}
