--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -60,7 +60,7 @@
 					</div>
 
 					<!-- Blog -->
-					<div role="tabpanel" class="tab-pane fade" id="blog">
+					<div role="tabpanel" class="tab-pane fade" id="blog" style="margin-bottom: 10px;">
 						<div id="blog_result"></div>
 					</div>
 
