--- a/app/views/home/brandpage.html.erb
+++ b/app/views/home/brandpage.html.erb
@@ -5,7 +5,7 @@
 	</div>
 </div>
 
-<div class="container">
+<div class="container" style="margin-bottom: 30px;">
 	<div id="home_blockquote">
 		<div class="row">
 			<div class="col-md-5 hidden-xs">
