--- a/app/views/home/brandpage.html.erb
+++ b/app/views/home/brandpage.html.erb
@@ -38,7 +38,7 @@
 		</div>
 
 		<div class="col-xs-10 col-xs-offset-1" style="padding: 0px;">
-			<%= button_to search_path, { class: "btn btn-block", style: "background-color: #dd4814; color: white;", method: :get } do %>
+			<%= button_to search_path, { class: "btn btn-block", style: "background-color: #ea4c15; color: white;", method: :get } do %>
 				<span class="ubuntu" style="color: white;">MenuMap</span> 검색
 			<% end %>
 		</div>
