--- a/app/views/restaurants/_info.html.erb
+++ b/app/views/restaurants/_info.html.erb
@@ -10,7 +10,7 @@
 				<%= @restaurant.phnum %> <%= delivery_possible_with_middot(@restaurant) %>
 			<% end %>
 		<% else %>
-			<span style="color: #337ab7">전화번호 정보가 없습니다.</span>
+			<span style="color: #5890ff">전화번호 정보가 없습니다.</span>
 		<% end %>
 	</li>
 	<li>
