--- a/app/views/home/brandpage.html.erb
+++ b/app/views/home/brandpage.html.erb
@@ -13,9 +13,9 @@
 			</div>
 			<div class="col-md-7">
 				<blockquote>
-					<p>9월의 목표는 10,000 daily session</p>
-					<p>10월부터도 계속 하기를</p>
-					<p>그러면 무슨 문구가 필요한가?</p>
+					<p><span style="color: #ea4c15; font-weight: 500;">메뉴</span> 정보 서비스입니다.</p>
+					<p>직접 메뉴를 <span style="color: #ea4c15; font-weight: 500;">추가</span>할 수 있습니다.</p>
+					<p>자신만의 <span style="color: #ea4c15; font-weight: 500;">맛집 지도</span>를 만들 수 있습니다.</p>
 				</blockquote>
 			</div>
 		</div>
