--- a/app/views/socials/_share_rest.html.erb
+++ b/app/views/socials/_share_rest.html.erb
@@ -1,1 +1,19 @@
-<%= @restaurant.name %>
+<div style="text-align: center;">
+	<a id="kakaotalk_link" href="javascript:;">
+		<%= image_tag "api/kakaolink_btn_medium.png", style: "width: 40px;" %>
+	</a>
+</div>
+
+<script>
+Kakao.init('<%= Daum::KAKAO_JS_KEY %>');
+
+Kakao.Link.createTalkLinkButton({
+  container: '#kakaotalk_link',
+	label: '<%= kakaotalk_link_label(@restaurant) %>',
+  webButton: {
+    text: 'MenuMap 위치보기',
+    // url: 'http://menumap.co.kr/restaurants/<%= @restaurant.id %>'
+    url: 'http://52.69.51.63:3000/restaurants/<%= @restaurant.id %>'
+  }
+});
+</script>
