--- a/app/views/mymaps/index.html.erb
+++ b/app/views/mymaps/index.html.erb
@@ -13,7 +13,7 @@
 	<% end %>
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="MenuMap" />
-	<meta property="og:url" content="http://52.69.51.63/users/<%= @user.username %>/MyMap" />
+	<meta property="og:url" content="http://menumap.co.kr/users/<%= @user.username %>/MyMap" />
 	<meta property="og:description" content="MyMap" />
 	<% unless @user.mymap_snapshot.blank? %>
 		<meta property="og:image" content="<%= @user.mymap_snapshot.snapshot.url %>" />
