--- a/app/views/home/brandpage.html.erb
+++ b/app/views/home/brandpage.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="container" style="padding: 0;">
 	<div id="home_bg">
 		<p>이 세상 모든 메뉴가 검색되는 그날까지</p>
 		<h1><span class="ubuntu" style="color: white;">MenuMap</span></h1>
@@ -13,9 +13,9 @@
 			</div>
 			<div class="col-md-7">
 				<blockquote>
-					<p><span style="color: #ea4c15; font-weight: 500;">메뉴</span> 정보 서비스입니다.</p>
-					<p>직접 메뉴를 <span style="color: #ea4c15; font-weight: 500;">추가</span>할 수 있습니다.</p>
-					<p>자신만의 <span style="color: #ea4c15; font-weight: 500;">맛집 지도</span>를 만들 수 있습니다.</p>
+					<p><span style="color: #ea4c15;">메뉴</span> 정보 서비스입니다.</p>
+					<p>직접 메뉴를 <span style="color: #ea4c15;">추가</span>할 수 있습니다.</p>
+					<p>자신만의 <span style="color: #ea4c15;">맛집 지도</span>를 만들 수 있습니다.</p>
 				</blockquote>
 			</div>
 		</div>
@@ -37,7 +37,7 @@
 			개가 저장되어있습니다.
 		</div>
 
-		<div class="col-xs-10 col-xs-offset-1" style="padding: 0px;">
+		<div id="home_btn" class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2" style="padding: 0px;">
 			<%= button_to search_path, { class: "btn btn-block", style: "background-color: #ea4c15; color: white;", method: :get } do %>
 				<span class="ubuntu" style="color: white;">MenuMap</span> 검색
 			<% end %>
