--- a/app/views/restaurants/_picture.html.erb
+++ b/app/views/restaurants/_picture.html.erb
@@ -31,7 +31,7 @@
 		<%= f.hidden_field :imageable_id, value: @picture.imageable_id %>
 		<%= f.hidden_field :imageable_type, value: @picture.imageable_type %>
 		<%= f.file_field :img, multiple: true, class: "uploadImage" %>
-		<div style="float: right;">
+		<div style="float: right; margin-bottom: 10px;">
 			<%= button_tag type: "button", class: "file_select btn btn_submit" do %>
 				<span class="glyphicon glyphicon-plus"></span>
 			<% end %>
